// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QueryBuilderGeoShapeSearch transformGeoShapeToDSL function All operators nested 1`] = `
{
  "contains": {
    "nested": {
      "path": "included",
      "query": {
        "geo_shape": {
          "geometry": {
            "relation": "contains",
            "shape": {
              "coordinates": [
                [
                  [
                    100,
                    0,
                  ],
                  [
                    101,
                    0,
                  ],
                  [
                    101,
                    1,
                  ],
                  [
                    100,
                    1,
                  ],
                  [
                    100,
                    0,
                  ],
                ],
              ],
              "type": "polygon",
            },
          },
        },
      },
    },
  },
  "disjoint": {
    "nested": {
      "path": "included",
      "query": {
        "geo_shape": {
          "geometry": {
            "relation": "disjoint",
            "shape": {
              "coordinates": [
                [
                  [
                    100,
                    0,
                  ],
                  [
                    101,
                    0,
                  ],
                  [
                    101,
                    1,
                  ],
                  [
                    100,
                    1,
                  ],
                  [
                    100,
                    0,
                  ],
                ],
              ],
              "type": "polygon",
            },
          },
        },
      },
    },
  },
  "intersects": {
    "nested": {
      "path": "included",
      "query": {
        "geo_shape": {
          "geometry": {
            "relation": "intersects",
            "shape": {
              "coordinates": [
                [
                  [
                    100,
                    0,
                  ],
                  [
                    101,
                    0,
                  ],
                  [
                    101,
                    1,
                  ],
                  [
                    100,
                    1,
                  ],
                  [
                    100,
                    0,
                  ],
                ],
              ],
              "type": "polygon",
            },
          },
        },
      },
    },
  },
  "within": {
    "nested": {
      "path": "included",
      "query": {
        "geo_shape": {
          "geometry": {
            "relation": "within",
            "shape": {
              "coordinates": [
                [
                  [
                    100,
                    0,
                  ],
                  [
                    101,
                    0,
                  ],
                  [
                    101,
                    1,
                  ],
                  [
                    100,
                    1,
                  ],
                  [
                    100,
                    0,
                  ],
                ],
              ],
              "type": "polygon",
            },
          },
        },
      },
    },
  },
}
`;

exports[`QueryBuilderGeoShapeSearch transformGeoShapeToDSL function All operators non-nested 1`] = `
{
  "contains": {
    "geo_shape": {
      "geometry": {
        "relation": "contains",
        "shape": {
          "coordinates": [
            [
              [
                100,
                0,
              ],
              [
                101,
                0,
              ],
              [
                101,
                1,
              ],
              [
                100,
                1,
              ],
              [
                100,
                0,
              ],
            ],
          ],
          "type": "polygon",
        },
      },
    },
  },
  "disjoint": {
    "geo_shape": {
      "geometry": {
        "relation": "disjoint",
        "shape": {
          "coordinates": [
            [
              [
                100,
                0,
              ],
              [
                101,
                0,
              ],
              [
                101,
                1,
              ],
              [
                100,
                1,
              ],
              [
                100,
                0,
              ],
            ],
          ],
          "type": "polygon",
        },
      },
    },
  },
  "intersects": {
    "geo_shape": {
      "geometry": {
        "relation": "intersects",
        "shape": {
          "coordinates": [
            [
              [
                100,
                0,
              ],
              [
                101,
                0,
              ],
              [
                101,
                1,
              ],
              [
                100,
                1,
              ],
              [
                100,
                0,
              ],
            ],
          ],
          "type": "polygon",
        },
      },
    },
  },
  "within": {
    "geo_shape": {
      "geometry": {
        "relation": "within",
        "shape": {
          "coordinates": [
            [
              [
                100,
                0,
              ],
              [
                101,
                0,
              ],
              [
                101,
                1,
              ],
              [
                100,
                1,
              ],
              [
                100,
                0,
              ],
            ],
          ],
          "type": "polygon",
        },
      },
    },
  },
}
`;
